Fixed force damage bypassing game modes